modificacion de h2 en index.html

--- a/Proyecto final2/index.html
+++ b/Proyecto final2/index.html
@@ -50,6 +50,9 @@
                Diseño Web, RedesSociales <br> 
                y Marketing Online.</P></div>
         </section>
+        <section class="ejemplo__git">
+            <h2>hola mundo</h2>
+        </section>
 
     </main>
     <footer class="footer">
